# cpp-json-schema

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: Config.cmake.in  install.cmake
include/cpp-json-schema/: array_property.hpp  boolean_property.hpp  enum_property.hpp  integer_property.hpp  null_property.hpp  number_property.hpp  object_property.hpp  property.hpp  ref_property.hpp  schema.hpp  string_property.hpp  types.hpp
src/: array_property.cpp  boolean_property.cpp  enum_property.cpp  integer_property.cpp  null_property.cpp  number_property.cpp  object_property.cpp  property.cpp  ref_property.cpp  schema.cpp  string_property.cpp
tests/: CMakeLists.txt
tests/src/: schema.cpp
